2008-05-26  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/trackerd/tracker-main.c/h: Fixed the build 
	for --disable-hal
	* svn merge -r 1423:1480 ../xesam-support

2008-05-23  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/Makefile.am:
	* src/trackerd/tracker-db-sqlite.c:
	* src/trackerd/tracker-db-sqlite.h:
	* src/trackerd/tracker-dbus-metadata.c:
	* src/trackerd/tracker-field-data.[ch]:
	* src/trackerd/tracker-field.c:
	* src/trackerd/tracker-rdf-query.c:
	* src/trackerd/tracker-xesam-query.c: Added the
	tracker-field-data.[ch] to handle all FieldData code that used to
	exist. Also fixed up some errors in the tracker-xesam-query.c
	module where is_end_operator() and is_operator() were not proper
	logic statements.

2008-05-23  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-db-sqlite.c:
	* src/trackerd/tracker-db.c:
	* src/trackerd/tracker-dbus-files.c:
	* src/trackerd/tracker-field.[ch]:
	* src/trackerd/tracker-ontology.[ch]: Don't use "const" for
	TrackerField, it is unnecessary. When cleaning up the
	TrackerFieldData, there is no need to check the pointer value
	before calling g_free() either, since g_free() does this for us. 

2008-05-23  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-cache.c: 
	* src/trackerd/tracker-db.c: 
	* src/trackerd/tracker-inotify.c:
	* src/trackerd/tracker-main.h: Removed tracker->request_waiting,
	it was only ever set, not used. Moved
	tracker->black_list_timer_active, it is only used in the
	tracker-db module. 

2008-05-23  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-nfs-lock.[ch]: 
	* src/libtracker-db/Makefile.am:
	* src/trackerd/tracker-cache.c:
	* src/trackerd/tracker-db-manager.c:
	* src/trackerd/tracker-db-sqlite.c: 
	* src/trackerd/tracker-db.c:
	* src/trackerd/tracker-email-utils.c:
	* src/trackerd/tracker-hal.c:
	* src/trackerd/tracker-indexer.c:
	* src/trackerd/tracker-main.[ch]:
	* src/trackerd/tracker-metadata.c:
	* src/trackerd/tracker-utils.c: